syntax = "proto3";

option csharp_namespace = "Pb";

package pb;

import "common.proto";

service ImLogic {
  rpc Authenticate (AuthenticateRequest) returns (AuthenticateReply);
}

message AuthenticateRequest {
  string token = 1;
}

message AuthenticateReply {
  string app_id = 1;
  string user_id = 2;
  DeviceType device_type = 3;
}
